--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -105,7 +105,7 @@ pages:
       description: Vous n'avez pas encore envoyé de fichiers.
       upload_button: Envoyer un fichier
     no_results:
-      title: Hmm, nous n'avons rien trouvé
+      title: Hmm, il n'y a rien par ici
       description: Vos filtres ne correspondent à aucun fichier.
       reset_filters: Réinitialiser les filtres
     error:
