--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -133,6 +133,20 @@ pages:
       settings: Settings
     security:
       change_password: Change password
+    tokens:
+      title: Personal tokens
+      create: Create a new token
+      created_at: Created on {date}
+      last_used: Last used {date}
+      never_used: Never used
+      recently_created: Recently created
+      delete:
+        title: Delete a token
+        success: Le fichier a été supprimé
+        error: Le fichier n'a pas pu être supprimé
+        warning: Are you sure you want to delete this token? This action is irreversible. You will not be able to upload files using this token anymore.
+        cancel: Cancel
+        submit: Delete
     settings:
       headers:
         files_upload: Files upload
