--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -149,6 +149,8 @@ pages:
         summary: A personal token allows you to authorize a third-party application to upload files with your identity. Tokens are strictly personal and must not be shared. If you think a token has been compromised, it is strongly recommended to delete it.
         fields:
           name: Token name
+        errors:
+          missing_name: Token name is required
         cancel: Cancel
         submit: Create
       delete_dialog:
