--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -149,6 +149,8 @@ pages:
         summary: Un jeton personnel vous permet d'autoriser une application tierce à envoyer des fichiers avec votre identité. Les jetons sont strictement personnels et ne doivent pas être partagés. Si vous pensez qu'un jeton est compromis, il est vivement conseillé de le supprimer.
         fields:
           name: Nom du jeton
+        errors:
+          missing_name: Nom du jeton requis
         cancel: Annuler
         submit: Créer
       delete_dialog:
