--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -124,7 +124,7 @@ pages:
   debug:
     title: Debug
   profile:
-    title: '{username}''s profile'
+    title: '{username}’s profile'
     menu:
       details: Details
       security: Security
@@ -151,7 +151,7 @@ pages:
         summary: A personal token allows you to authorize a third-party application to upload files with your identity. Tokens are strictly personal and must not be shared. If you think a token has been compromised, it is strongly recommended to delete it.
         fields:
           name: Token name
-          name_placeholder: e.g. {name}'s computer
+          name_placeholder: e.g. {name}’s computer
         errors:
           missing_name: Token name is required
         cancel: Cancel
@@ -194,7 +194,7 @@ pages:
         description: Hedera uses animations and transitions to make the user experience more enjoyable. If you experience performance issues, you can disable them here.
       preferred_theme:
         title: Theme
-        description: Choose your preferred theme among light, dark and system default. The system default theme will follow your operating system's theme preference.
+        description: Choose your preferred theme among light, dark and system default. The system default theme will follow your operating system’s theme preference.
         choose: Choose a theme
       preferred_locale:
         title: Language
