--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -140,12 +140,32 @@ pages:
         role: Role
         status: Status
         creation_date: Creation date
+      context_menu:
+        edit: Edit
+        deactivate: Deactivate
+        activate: Activate
+        delete: Delete
       create_user: Create user
       create_dialog:
         title: Create a user
         summary: Create a user to allow them to log in to Hedera and upload files. Users can be disabled at any time.
         cancel: Cancel
         submit: Create
+      activate_dialog:
+        title: Activate a user
+        summary: The user will be able to log in and upload files. Their existing files will now be visible. The user can be deactivated at any time. Are you sure you want to activate this user?
+        cancel: Cancel
+        submit: Activate the user
+      deactivate_dialog:
+        title: Deactivate a user
+        summary: The user will no longer be able to log in or upload files. Their files will no longer be visible, but will not be deleted. The user can be reactivated at any time. Are you sure you want to deactivate this user?
+        cancel: Cancel
+        submit: Deactivate the user
+      delete_dialog:
+        title: Delete a user
+        summary: This action is irreversible and all the user's files will be permanently deleted. Are you sure you want to delete this user?
+        cancel: Cancel
+        submit: Delete
   debug:
     title: Debug
   profile:
@@ -310,6 +330,14 @@ actions:
       success:
         title: User created
         message: The user “{username}” has been created
+    activate:
+      success:
+        title: User activated
+        message: The user “{username}” has been activated
+    deactivate:
+      success:
+        title: User deactivated
+        message: The user “{username}” has been deactivated
     delete:
       success:
         title: User deleted
