--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -323,6 +323,9 @@ actions:
       success:
         title: Fichier supprimé
         message: Le fichier “{name}” a été supprimé
+    uploaded:
+      title: Fichier envoyé
+      message: Le fichier “{name}” a été envoyé
     update:
       visibility:
         success:
