Update forms (wip)

--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -308,7 +308,11 @@ forms:
       confirm_password: Password confirmation
       role: Role
       role_placeholder: Select a role
+      disk_quota: Disk space quota
+      disk_quota_placeholder: Type a size
+      disk_quota_placeholder_unlimited: Unlimited
       force_change_password: Force to change password on first login
+      unlimited_disk_quota: Allow for unlimited disk space quota
 
 actions:
   files:
