--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -38,6 +38,8 @@ pages:
       expired: Votre session a expiré, veuillez vous reconnecter
       logout_all: Vous avez été déconnecté de tous les appareils
       disabled: Votre compte a été désactivé
+  change_password:
+    title: Modifier le mot de passe
   reset_password:
     title: Réinitialiser le mot de passe
     login: Retour à la connexion
@@ -270,6 +272,14 @@ forms:
       password: Mot de passe
       remember_me: Se souvenir de moi
       username: Nom d’utilisateur
+  change_password:
+    errors:
+      missing_password: Mot de passe requis
+      missing_password_confirmation: Confirmation du mot de passe requise
+    fields:
+      password: Nouveau mot de passe
+      confirm_password: Confirmer le nouveau mot de passe
+    submit: Continuer
   reset_password:
     errors:
       missing_email: Adresse e-mail requise
