--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -122,8 +122,9 @@ pages:
     select_files: Select files
     upload_files: Upload files
     clear_files: Clear files
-    completed: Uploaded
     pending: Pending
+    uploading: Uploading
+    completed: Uploaded
   analytics:
     title: Analytics
   configuration:
