Added error section on upload error

--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -125,6 +125,7 @@ pages:
     pending: En attente
     uploading: En cours d’envoi
     completed: En ligne
+    error: Erreur
   analytics:
     title: Statistiques
   configuration:
