--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -125,6 +125,7 @@ pages:
     pending: Pending
     uploading: Uploading
     completed: Uploaded
+    error: Error
   analytics:
     title: Analytics
   configuration:
