Show toast when all uploads are finished

--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -126,6 +126,7 @@ pages:
     uploading: Uploading
     completed: Uploaded
     error: Error
+    finished: Upload finished
   analytics:
     title: Analytics
   configuration:
